@@ -8,7 +8,6 @@ import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.util.logging.Level;
@@ -27,43 +26,52 @@ import tr.org.pardus.mys.liderahenksetup.utils.network.NetworkUtils;
  */
 public class SetupUtils {
 
-	private static final Logger logger = Logger.getLogger(SetupUtils.class
-			.getName());
+	private static final Logger logger = Logger.getLogger(SetupUtils.class.getName());
 
 	/**
 	 * Command used to check a package with the certain version number exists.
 	 */
-	private static final String CHECK_PACKAGE_EXIST_CMD = "sudo -S apt-cache policy {0}";
+	private static final String CHECK_PACKAGE_EXIST_CMD = "sudo -S -p '' apt-cache policy {0}";
 
 	/**
 	 * Command used to check a package with the certain version number
 	 * installed.
 	 */
-	private static final String CHECK_PACKAGE_INSTALLED_CMD = "sudo -S dpkg -l  | grep \"{0}\" | awk '{ print $3; }'";
+	private static final String CHECK_PACKAGE_INSTALLED_CMD = "sudo -S -p '' dpkg -l  | grep \"{0}\" | awk '{ print $3; }'";
 
 	/**
 	 * Install package via apt-get
 	 */
-	private static final String INSTALL_PACKAGE_FROM_REPO_CMD = "sudo -S apt-get install -y {0}={1}";
+	private static final String INSTALL_PACKAGE_FROM_REPO_CMD = "sudo -S -p '' apt-get install -y {0}={1}";
 	/**
 	 * Install package via apt-get (without version)
 	 */
-	private static final String INSTALL_PACKAGE_FROM_REPO_CMD_WITHOUT_VERSION = "sudo -S apt-get install -y {0}";
+	private static final String INSTALL_PACKAGE_FROM_REPO_CMD_WITHOUT_VERSION = "sudo -S -p '' apt-get install -y {0}";
 
 	/**
 	 * Install given package via dpkg
 	 */
-	private static final String INSTALL_PACKAGE = "sudo -S dpkg -i {0}";
+	private static final String INSTALL_PACKAGE = "sudo -S -p '' dpkg -i {0}";
 
 	/**
 	 * Uninstall package via apt-get
 	 */
-	private static final String UNINSTALL_PACKAGE_CMD = "sudo -S apt-get remove --purge -y {0}";
+	private static final String UNINSTALL_PACKAGE_CMD = "sudo -S -p '' apt-get remove --purge -y {0}";
 
 	/**
 	 * Add new repository
 	 */
-	private static final String ADD_APP_REPO_CMD = "sudo -S add-apt-repository -y {0} && sudo apt-get update";
+	private static final String ADD_APP_REPO_CMD = "sudo -S -p '' add-apt-repository -y {0} && sudo apt-get update";
+
+	/**
+	 * Turns off "frontend" (prompts) during installation
+	 */
+	private static final String SET_DEBIAN_FRONTEND = "export DEBIAN_FRONTEND='noninteractive'";
+
+	/**
+	 * Sets default values which used during the noninteractive installation
+	 */
+	private static final String DEBCONF_SET_SELECTIONS = "sudo -S -p '' debconf-set-selections <<< '{0}'";
 
 	/**
 	 * Tries to connect via SSH. It uses username-password pair to connect.
@@ -73,8 +81,7 @@ public class SetupUtils {
 	 * @param password
 	 * @return
 	 */
-	public static boolean canConnectViaSsh(String ip, String username,
-			String password) {
+	public static boolean canConnectViaSsh(final String ip, final String username, final String password) {
 		return canConnectViaSsh(ip, username, password, null, null);
 	}
 
@@ -88,10 +95,9 @@ public class SetupUtils {
 	 * @return true if an SSH connection can be established successfully, false
 	 *         otherwise
 	 */
-	public static boolean canConnectViaSshWithoutPassword(String ip,
-			String username, String privateKey) {
-		return canConnectViaSsh(ip, username == null ? "root" : username, null,
-				null, privateKey);
+	public static boolean canConnectViaSshWithoutPassword(final String ip, final String username,
+			final String privateKey) {
+		return canConnectViaSsh(ip, username == null ? "root" : username, null, null, privateKey);
 	}
 
 	/**
@@ -104,15 +110,13 @@ public class SetupUtils {
 	 * @return true if an SSH connection can be established successfully, false
 	 *         otherwise
 	 */
-	public static boolean canConnectViaSsh(String ip, String username,
-			String password, Integer port, String privateKey) {
+	public static boolean canConnectViaSsh(final String ip, final String username, final String password,
+			final Integer port, final String privateKey) {
 		SSHManager manager = null;
 		try {
 			manager = new SSHManager(ip, username, password, port, privateKey);
 			manager.connect();
-			logger.log(Level.INFO,
-					"Connection established to: {0} with username: {1}",
-					new Object[] { ip, username });
+			logger.log(Level.INFO, "Connection established to: {0} with username: {1}", new Object[] { ip, username });
 			return true;
 		} catch (SSHConnectionException e) {
 			logger.log(Level.SEVERE, e.getMessage());
@@ -139,10 +143,9 @@ public class SetupUtils {
 	 * @throws CommandExecutionException
 	 * @throws SSHConnectionException
 	 */
-	public static boolean packageExists(String ip, String username,
-			final String password, Integer port, String privateKey,
-			String packageName, String version)
-			throws CommandExecutionException, SSHConnectionException {
+	public static boolean packageExists(final String ip, final String username, final String password,
+			final Integer port, final String privateKey, final String packageName, final String version)
+					throws CommandExecutionException, SSHConnectionException {
 		if (NetworkUtils.isLocal(ip)) {
 
 			logger.log(Level.INFO, "Checking package locally.");
@@ -151,14 +154,12 @@ public class SetupUtils {
 
 			try {
 
-				String command = CHECK_PACKAGE_EXIST_CMD.replace("{0}",
-						packageName);
+				String command = CHECK_PACKAGE_EXIST_CMD.replace("{0}", packageName);
 				Process process = Runtime.getRuntime().exec(command);
 
 				if (password != null) {
 					OutputStream stdIn = process.getOutputStream();
-					BufferedWriter writer = new BufferedWriter(
-							new OutputStreamWriter(stdIn));
+					BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
 					writer.write(password);
 					writer.write("\n"); // write newline char to mimic 'enter'
 										// press.
@@ -167,32 +168,23 @@ public class SetupUtils {
 
 				int exitValue = process.waitFor();
 				if (exitValue != 0) {
-					logger.log(
-							Level.SEVERE,
-							"Process ends with exit value: {0} - err: {1}",
-							new Object[] {
-									process.exitValue(),
-									StringUtils.convertStream(process
-											.getErrorStream()) });
-					throw new CommandExecutionException(
-							"Failed to execute command: " + command);
+					logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}",
+							new Object[] { process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+					throw new CommandExecutionException("Failed to execute command: " + command);
 				}
 
 				// If input stream starts with "N:"
-			    // it means that there is not such package.
+				// it means that there is not such package.
 				if (version == null || "".equals(version)) {
-					boolean exists = !StringUtils.convertStream(
-							process.getInputStream()).startsWith("N:");
-					
+					boolean exists = !StringUtils.convertStream(process.getInputStream()).startsWith("N:");
+
 					return exists;
-				}
-				else {
-					boolean exists = StringUtils.convertStream(
-							process.getInputStream()).contains(version);
-					
+				} else {
+					boolean exists = StringUtils.convertStream(process.getInputStream()).contains(version);
+
 					logger.log(Level.INFO, "Does package {0}:{1} exist: {2}",
 							new Object[] { packageName, version, exists });
-					
+
 					return exists;
 				}
 
@@ -211,15 +203,13 @@ public class SetupUtils {
 			}
 		} else {
 
-			logger.log(Level.INFO,
-					"Checking package remotely on: {0} with username: {1}",
+			logger.log(Level.INFO, "Checking package remotely on: {0} with username: {1}",
 					new Object[] { ip, username });
 
-			SSHManager manager = new SSHManager(ip, username, password, port,
-					privateKey);
+			SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
 			manager.connect();
-			String versions = manager.execCommand(CHECK_PACKAGE_EXIST_CMD,
-					new Object[] { packageName }, new IOutputStreamProvider() {
+			String versions = manager.execCommand(CHECK_PACKAGE_EXIST_CMD, new Object[] { packageName },
+					new IOutputStreamProvider() {
 						@Override
 						public byte[] getStreamAsByteArray() {
 							return (password + "\n").getBytes();
@@ -228,24 +218,22 @@ public class SetupUtils {
 			manager.disconnect();
 
 			/**
-			 * If input stream starts with "N:"
-			 * it means that there is not such package.
+			 * If input stream starts with "N:" it means that there is not such
+			 * package.
 			 */
 			if (version == null || "".equals(version)) {
 				boolean exists = !versions.startsWith("N:");
 				return exists;
-			}
-			else {
+			} else {
 				boolean exists = versions.contains(version);
 				logger.log(Level.INFO, "Does package {0}:{1} exist: {2}",
 						new Object[] { packageName, version, exists });
-				
+
 				return exists;
 			}
 		}
 
-		logger.log(Level.INFO, "Does package {0}:{1} exist: {2}", new Object[] {
-				packageName, version, false });
+		logger.log(Level.INFO, "Does package {0}:{1} exist: {2}", new Object[] { packageName, version, false });
 
 		return false;
 	}
@@ -263,10 +251,9 @@ public class SetupUtils {
 	 * @throws CommandExecutionException
 	 * @throws SSHConnectionException
 	 */
-	public static boolean packageInstalled(String ip, String username,
-			final String password, Integer port, String privateKey,
-			String packageName, String version)
-			throws CommandExecutionException, SSHConnectionException {
+	public static boolean packageInstalled(final String ip, final String username, final String password,
+			final Integer port, final String privateKey, final String packageName, final String version)
+					throws CommandExecutionException, SSHConnectionException {
 		if (NetworkUtils.isLocal(ip)) {
 
 			logger.log(Level.INFO, "Checking package locally.");
@@ -275,15 +262,12 @@ public class SetupUtils {
 
 			try {
 
-				String command = CHECK_PACKAGE_INSTALLED_CMD.replace("{0}",
-						packageName);
-				Process process = Runtime.getRuntime().exec(
-						new String[] { "/bin/sh", "-c", command });
+				String command = CHECK_PACKAGE_INSTALLED_CMD.replace("{0}", packageName);
+				Process process = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c", command });
 
 				if (password != null) {
 					OutputStream stdIn = process.getOutputStream();
-					BufferedWriter writer = new BufferedWriter(
-							new OutputStreamWriter(stdIn));
+					BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
 					writer.write(password);
 					writer.write("\n"); // write newline char to mimic 'enter'
 					// press.
@@ -292,19 +276,12 @@ public class SetupUtils {
 
 				int exitValue = process.waitFor();
 				if (exitValue != 0) {
-					logger.log(
-							Level.SEVERE,
-							"Process ends with exit value: {0} - err: {1}",
-							new Object[] {
-									process.exitValue(),
-									StringUtils.convertStream(process
-											.getErrorStream()) });
-					throw new CommandExecutionException(
-							"Failed to execute command: " + command);
+					logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}",
+							new Object[] { process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+					throw new CommandExecutionException("Failed to execute command: " + command);
 				}
 
-				boolean installed = StringUtils.convertStream(
-						process.getInputStream()).contains(version);
+				boolean installed = StringUtils.convertStream(process.getInputStream()).contains(version);
 
 				logger.log(Level.INFO, "Is package {0}:{1} installed: {2}",
 						new Object[] { packageName, version, installed });
@@ -326,36 +303,33 @@ public class SetupUtils {
 			}
 		} else {
 			try {
-				logger.log(Level.INFO,
-						"Checking package remotely on: {0} with username: {1}",
+				logger.log(Level.INFO, "Checking package remotely on: {0} with username: {1}",
 						new Object[] { ip, username });
-				
-				SSHManager manager = new SSHManager(ip, username, password, port,
-						privateKey);
+
+				SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
 				manager.connect();
-				String versions = manager.execCommand(CHECK_PACKAGE_INSTALLED_CMD,
-						new Object[] { packageName }, new IOutputStreamProvider() {
-					@Override
-					public byte[] getStreamAsByteArray() {
-						return (password + "\n").getBytes();
-					}
-				});
+				String versions = manager.execCommand(CHECK_PACKAGE_INSTALLED_CMD, new Object[] { packageName },
+						new IOutputStreamProvider() {
+							@Override
+							public byte[] getStreamAsByteArray() {
+								return (password + "\n").getBytes();
+							}
+						});
 				manager.disconnect();
-				
+
 				boolean installed = versions.contains(version);
-				
+
 				logger.log(Level.INFO, "Is package {0}:{1} installed: {2}",
 						new Object[] { packageName, version, installed });
-				
+
 				return installed;
-				
+
 			} catch (CommandExecutionException | SSHConnectionException e) {
 				e.printStackTrace();
 			}
 		}
 
-		logger.log(Level.INFO, "Is package {0}:{1} installed: {2}",
-				new Object[] { packageName, version, false });
+		logger.log(Level.INFO, "Is package {0}:{1} installed: {2}", new Object[] { packageName, version, false });
 
 		return false;
 	}
@@ -375,38 +349,32 @@ public class SetupUtils {
 	 * @throws SSHConnectionException
 	 * @throws CommandExecutionException
 	 */
-	public static void installPackage(String ip, String username,
-			final String password, Integer port, String privateKey,
-			String packageName, String version) throws SSHConnectionException,
-			CommandExecutionException {
+	public static void installPackage(final String ip, final String username, final String password, final Integer port,
+			final String privateKey, final String packageName, final String version)
+					throws SSHConnectionException, CommandExecutionException {
 		if (NetworkUtils.isLocal(ip)) {
 
 			logger.log(Level.INFO, "Installing package locally.");
 
 			try {
-				
+
 				String command;
 				String logMessage;
-				
+
 				// If version is not given
-				if (version == null || "".equals(version)) {
-					command = INSTALL_PACKAGE_FROM_REPO_CMD_WITHOUT_VERSION.
-							replace("{0}", packageName);
+				if (version == null || version.isEmpty()) {
+					command = INSTALL_PACKAGE_FROM_REPO_CMD_WITHOUT_VERSION.replace("{0}", packageName);
 					logMessage = "Package {0} installed successfully";
-				}
-				else {
-					command = INSTALL_PACKAGE_FROM_REPO_CMD.replace("{0}",
-							packageName).replace("{1}", version);
+				} else {
+					command = INSTALL_PACKAGE_FROM_REPO_CMD.replace("{0}", packageName).replace("{1}", version);
 					logMessage = "Package {0}:{1} installed successfully";
 				}
-				
-				Process process = Runtime.getRuntime().exec(command);	
 
-				// TODO eğer lokale sshla bağlanacaksam case'ini ele almak lazım.
+				Process process = Runtime.getRuntime().exec(command);
+
 				if (password != null) {
 					OutputStream stdIn = process.getOutputStream();
-					BufferedWriter writer = new BufferedWriter(
-							new OutputStreamWriter(stdIn));
+					BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
 					writer.write(password);
 					writer.write("\n"); // write newline char to mimic 'enter'
 										// press.
@@ -415,23 +383,14 @@ public class SetupUtils {
 
 				int exitValue = process.waitFor();
 				if (exitValue != 0) {
-					logger.log(
-							Level.SEVERE,
-							"Process ends with exit value: {0} - err: {1}",
-							new Object[] {
-									process.exitValue(),
-									StringUtils.convertStream(process
-											.getErrorStream()) });
-					throw new CommandExecutionException(
-							"Failed to execute command: " + command);
+					logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}",
+							new Object[] { process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+					throw new CommandExecutionException("Failed to execute command: " + command);
 				}
 				if (version == null || "".equals(version)) {
-					logger.log(Level.INFO, logMessage,
-							new Object[] { packageName, version });
-				}
-				else {
-					logger.log(Level.INFO, logMessage,
-							new Object[] { packageName });
+					logger.log(Level.INFO, logMessage, new Object[] { packageName, version });
+				} else {
+					logger.log(Level.INFO, logMessage, new Object[] { packageName });
 				}
 
 			} catch (IOException e) {
@@ -442,41 +401,37 @@ public class SetupUtils {
 
 		} else {
 			try {
-				logger.log(Level.INFO,
-						"Installing package remotely on: {0} with username: {1}",
+				logger.log(Level.INFO, "Installing package remotely on: {0} with username: {1}",
 						new Object[] { ip, username });
-				
-				SSHManager manager = new SSHManager(ip, username, password, port,
-						privateKey);
+
+				SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
 				manager.connect();
-				
+
 				// If version is not given
 				if (version == null || "".equals(version)) {
-					manager.execCommand(INSTALL_PACKAGE_FROM_REPO_CMD_WITHOUT_VERSION, 
-							new Object[] { packageName }, new IOutputStreamProvider() {
-						@Override
-						public byte[] getStreamAsByteArray() {
-							return (password + "\n").getBytes();
-						}
-					});
+					manager.execCommand(INSTALL_PACKAGE_FROM_REPO_CMD_WITHOUT_VERSION, new Object[] { packageName },
+							new IOutputStreamProvider() {
+								@Override
+								public byte[] getStreamAsByteArray() {
+									return (password + "\n").getBytes();
+								}
+							});
 
-					logger.log(Level.INFO, "Package {0} installed successfully",
-							new Object[] { packageName });
-				}
-				else {
-					manager.execCommand(INSTALL_PACKAGE_FROM_REPO_CMD, new Object[] {
-							packageName, version }, new IOutputStreamProvider() {
-						@Override
-						public byte[] getStreamAsByteArray() {
-							return (password + "\n").getBytes();
-						}
-					});
+					logger.log(Level.INFO, "Package {0} installed successfully", new Object[] { packageName });
+				} else {
+					manager.execCommand(INSTALL_PACKAGE_FROM_REPO_CMD, new Object[] { packageName, version },
+							new IOutputStreamProvider() {
+								@Override
+								public byte[] getStreamAsByteArray() {
+									return (password + "\n").getBytes();
+								}
+							});
 
 					logger.log(Level.INFO, "Package {0}:{1} installed successfully",
 							new Object[] { packageName, version });
 				}
 				manager.disconnect();
-				
+
 			} catch (CommandExecutionException | SSHConnectionException e) {
 				e.printStackTrace();
 			}
@@ -485,9 +440,12 @@ public class SetupUtils {
 	}
 
 	/**
-	 * Installs a package which specified by package name and version. Before
-	 * calling this method, package existence should be ensured by calling
-	 * packageExists() method.
+	 * Installs a package 'non-interactively' which specified by package name
+	 * and version. Before installing the package it uses debconf-set-selections
+	 * to insert default values which asked during the interactive installation.
+	 * 
+	 * Before calling this method, package existence should be ensured by
+	 * calling packageExists() method.
 	 * 
 	 * @param ip
 	 * @param username
@@ -496,65 +454,122 @@ public class SetupUtils {
 	 * @param privateKey
 	 * @param packageName
 	 * @param version
-	 * @throws SSHConnectionException
-	 * @throws CommandExecutionException
+	 * @param debconfValues
 	 */
-	public static void executeCommdGetResult(String ip, String username,final String password, Integer port, String privateKey,String param) 
-			throws SSHConnectionException,	CommandExecutionException {
+	public static void installPackageNoninteractively(final String ip, final String username, final String password,
+			final Integer port, final String privateKey, final String packageName, final String version,
+			final String[] debconfValues) {
 
-			logger.log(Level.INFO, "Installing package locally.");
+		try {
 
-			try {
+			// Try to uninstall the package first.
+			// This will give us a clean installation as well as clearing
+			// debconf selections
+			uninstallPackage(ip, username, password, port, privateKey, packageName + "*");
 
-//				String command = INSTALL_PACKAGE_FROM_REPO_CMD.replace("{0}",packageName).replace("{1}", version);
-				String command = "deluge-console info";
-				Process process = Runtime.getRuntime().exec(command);
+			if (NetworkUtils.isLocal(ip)) {
 
-				if (password != null) {
-					OutputStream stdIn = process.getOutputStream();
-					BufferedWriter writer = new BufferedWriter(
-							new OutputStreamWriter(stdIn));
-					writer.write(password);
-					writer.write("\n"); // write newline char to mimic 'enter'
-										// press.
-					writer.flush();
+				try {
+
+					// Set frontend as noninteractive
+					String command = SET_DEBIAN_FRONTEND;
+					Process process = Runtime.getRuntime().exec(command);
+
+					if (password != null) {
+						OutputStream stdIn = process.getOutputStream();
+						BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
+						writer.write(password);
+						writer.write("\n"); // write newline char to mimic
+											// 'enter'
+											// press.
+						writer.flush();
+					}
+
+					int exitValue = process.waitFor();
+					if (exitValue != 0) {
+						logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}", new Object[] {
+								process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+						throw new CommandExecutionException("Failed to execute command: " + command);
+					}
+
+					// Set debconf values
+					for (String value : debconfValues) {
+
+						command = DEBCONF_SET_SELECTIONS.replace("{0}", value);
+						process = Runtime.getRuntime().exec(command);
+
+						if (password != null) {
+							OutputStream stdIn = process.getOutputStream();
+							BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
+							writer.write(password);
+							writer.write("\n"); // write newline char to mimic
+												// 'enter'
+												// press.
+							writer.flush();
+						}
+
+						exitValue = process.waitFor();
+						if (exitValue != 0) {
+							logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}", new Object[] {
+									process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+							throw new CommandExecutionException("Failed to execute command: " + command);
+						}
+
+					}
+
+					// Finally, install the package
+					SetupUtils.installPackage(ip, username, password, port, privateKey, packageName, version);
+
+					logger.log(Level.INFO, "Package {0} installed successfully", packageName);
+
+				} catch (IOException e) {
+					e.printStackTrace();
+				} catch (InterruptedException e) {
+					e.printStackTrace();
 				}
 
-				int exitValue = process.waitFor();
-				if (exitValue != 0) {
-					logger.log(
-							Level.SEVERE,
-							"Process ends with exit value: {0} - err: {1}",
-							new Object[] {
-									process.exitValue(),
-									StringUtils.convertStream(process.getErrorStream()) });
-					throw new CommandExecutionException(
-							"Failed to execute command: " + command);
-				}
+			} else {
 
-				BufferedReader stdInput = new BufferedReader(new 
-					     InputStreamReader(process.getInputStream()));
+				SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
+				manager.connect();
 
-				String s = null;
-				while ((s = stdInput.readLine()) != null) {
-				    System.out.println(s);
-				}
+				// Set frontend as noninteractive
+				manager.execCommand(SET_DEBIAN_FRONTEND, new IOutputStreamProvider() {
+					@Override
+					public byte[] getStreamAsByteArray() {
+						return (password + "\n").getBytes();
+					}
+				});
 				
-//				logger.log(Level.INFO,
-//						"Package {0}:{1} installed successfully",
-//						new Object[] { packageName, version });
+				manager.disconnect();
 
-			} catch (IOException e) {
-				e.printStackTrace();
-			} catch (InterruptedException e) {
-				e.printStackTrace();
+				// Set debconf values
+				for (String value : debconfValues) {
+					manager = new SSHManager(ip, username, password, port, privateKey);
+					manager.connect();
+					manager.execCommand(DEBCONF_SET_SELECTIONS, new Object[] { value }, new IOutputStreamProvider() {
+						@Override
+						public byte[] getStreamAsByteArray() {
+							return (password + "\n").getBytes();
+						}
+					});
+					manager.disconnect();
+				}
+
+				// Finally, install the package
+				SetupUtils.installPackage(ip, username, password, port, privateKey, packageName, version);
+
+				logger.log(Level.INFO, "Package {0} uninstalled successfully", packageName);
 			}
 
-	
+		} catch (CommandExecutionException e) {
+			e.printStackTrace();
+		} catch (SSHConnectionException e) {
+			e.printStackTrace();
+		}
 
 	}
-	
-	
+
 	/**
 	 * Installs a deb package file. This can be used when a specified deb
 	 * package is already provided
@@ -565,37 +580,25 @@ public class SetupUtils {
 	 * @param port
 	 * @param privateKey
 	 * @param debPackage
-	 * @param useTorrent
 	 * @throws SSHConnectionException
 	 * @throws CommandExecutionException
 	 */
-	public static void installPackage(String ip, String username,
-			final String password, Integer port, String privateKey, File debPackage,
-			boolean useTorrent) throws SSHConnectionException,
-			CommandExecutionException {
+	public static void installPackage(final String ip, final String username, final String password, final Integer port,
+			final String privateKey, final File debPackage) throws SSHConnectionException, CommandExecutionException {
 		if (NetworkUtils.isLocal(ip)) {
 
 			logger.log(Level.INFO, "Installing package locally.");
 
 			try {
 
-				if (!useTorrent) {
-					copyFile(ip, username, password, port, privateKey,
-							debPackage, "/tmp/");
-				} else {
-					// TODO copy debPackage to /tmp/
-					// via torrent!
-					throw new CommandExecutionException("Not yet implemented.");
-				}
+				copyFile(ip, username, password, port, privateKey, debPackage, "/tmp/");
 
-				String command = INSTALL_PACKAGE.replace("{0}", "/tmp/"
-						+ debPackage.getName());
+				String command = INSTALL_PACKAGE.replace("{0}", "/tmp/" + debPackage.getName());
 				Process process = Runtime.getRuntime().exec(command);
 
 				if (password != null) {
 					OutputStream stdIn = process.getOutputStream();
-					BufferedWriter writer = new BufferedWriter(
-							new OutputStreamWriter(stdIn));
+					BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
 					writer.write(password);
 					writer.write("\n"); // write newline char to mimic 'enter'
 										// press.
@@ -604,19 +607,12 @@ public class SetupUtils {
 
 				int exitValue = process.waitFor();
 				if (exitValue != 0) {
-					logger.log(
-							Level.SEVERE,
-							"Process ends with exit value: {0} - err: {1}",
-							new Object[] {
-									process.exitValue(),
-									StringUtils.convertStream(process
-											.getErrorStream()) });
-					throw new CommandExecutionException(
-							"Failed to execute command: " + command);
+					logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}",
+							new Object[] { process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+					throw new CommandExecutionException("Failed to execute command: " + command);
 				}
 
-				logger.log(Level.INFO, "Package {0} installed successfully",
-						debPackage.getName());
+				logger.log(Level.INFO, "Package {0} installed successfully", debPackage.getName());
 
 			} catch (IOException e) {
 				e.printStackTrace();
@@ -626,18 +622,15 @@ public class SetupUtils {
 
 		} else {
 
-			logger.log(Level.INFO,
-					"Installing package remotely on: {0} with username: {1}",
+			logger.log(Level.INFO, "Installing package remotely on: {0} with username: {1}",
 					new Object[] { ip, username });
 
-			copyFile(ip, username, password, port, privateKey, debPackage,
-					"/tmp/");
+			copyFile(ip, username, password, port, privateKey, debPackage, "/tmp/");
 
-			SSHManager manager = new SSHManager(ip, username, password, port,
-					privateKey);
+			SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
 			manager.connect();
-			manager.execCommand(INSTALL_PACKAGE, new Object[] { "/tmp/"
-					+ debPackage.getName() }, new IOutputStreamProvider() {
+			manager.execCommand(INSTALL_PACKAGE, new Object[] { "/tmp/" + debPackage.getName() },
+					new IOutputStreamProvider() {
 						@Override
 						public byte[] getStreamAsByteArray() {
 							return (password + "\n").getBytes();
@@ -645,9 +638,31 @@ public class SetupUtils {
 					});
 			manager.disconnect();
 
-			logger.log(Level.INFO, "Package {0} installed successfully",
-					debPackage.getName());
+			logger.log(Level.INFO, "Package {0} installed successfully", debPackage.getName());
 		}
+	}
+
+	// TODO
+	// TODO
+	// TODO
+	// TODO
+	/**
+	 * Installs a deb package file. This can be used when a specified deb
+	 * package is already provided. Before installing the package it uses
+	 * debconf-set-selections to insert default values which asked during the
+	 * interactive installation.
+	 * 
+	 * @param ip
+	 * @param username
+	 * @param password
+	 * @param port
+	 * @param privateKey
+	 * @param debPackage
+	 * @param debconfValues
+	 */
+	public static void installPackageNonInteractively(final String ip, final String username, final String password,
+			final Integer port, final String privateKey, final File debPackage, final String[] debconfValues) {
+
 	}
 
 	/**
@@ -661,23 +676,21 @@ public class SetupUtils {
 	 * @throws CommandExecutionException
 	 * @throws SSHConnectionException
 	 */
-	public static void uninstallPackage(String ip, String username,
-			final String password, Integer port, String privateKey, String packageName)
-			throws CommandExecutionException, SSHConnectionException {
+	public static void uninstallPackage(final String ip, final String username, final String password,
+			final Integer port, final String privateKey, final String packageName)
+					throws CommandExecutionException, SSHConnectionException {
 		if (NetworkUtils.isLocal(ip)) {
 
 			logger.log(Level.INFO, "Uninstalling package locally.");
 
 			try {
 
-				String command = UNINSTALL_PACKAGE_CMD.replace("{0}",
-						packageName);
+				String command = UNINSTALL_PACKAGE_CMD.replace("{0}", packageName);
 				Process process = Runtime.getRuntime().exec(command);
 
 				if (password != null) {
 					OutputStream stdIn = process.getOutputStream();
-					BufferedWriter writer = new BufferedWriter(
-							new OutputStreamWriter(stdIn));
+					BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
 					writer.write(password);
 					writer.write("\n"); // write newline char to mimic 'enter'
 										// press.
@@ -686,19 +699,12 @@ public class SetupUtils {
 
 				int exitValue = process.waitFor();
 				if (exitValue != 0) {
-					logger.log(
-							Level.SEVERE,
-							"Process ends with exit value: {0} - err: {1}",
-							new Object[] {
-									process.exitValue(),
-									StringUtils.convertStream(process
-											.getErrorStream()) });
-					throw new CommandExecutionException(
-							"Failed to execute command: " + command);
+					logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}",
+							new Object[] { process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+					throw new CommandExecutionException("Failed to execute command: " + command);
 				}
 
-				logger.log(Level.INFO, "Package {0} uninstalled successfully",
-						packageName);
+				logger.log(Level.INFO, "Package {0} uninstalled successfully", packageName);
 
 			} catch (IOException e) {
 				e.printStackTrace();
@@ -708,24 +714,20 @@ public class SetupUtils {
 
 		} else {
 
-			logger.log(Level.INFO,
-					"Uninstalling package remotely on: {0} with username: {1}",
+			logger.log(Level.INFO, "Uninstalling package remotely on: {0} with username: {1}",
 					new Object[] { ip, username });
 
-			SSHManager manager = new SSHManager(ip, username, password, port,
-					privateKey);
+			SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
 			manager.connect();
-			manager.execCommand(UNINSTALL_PACKAGE_CMD,
-					new Object[] { packageName }, new IOutputStreamProvider() {
-						@Override
-						public byte[] getStreamAsByteArray() {
-							return (password + "\n").getBytes();
-						}
-					});
+			manager.execCommand(UNINSTALL_PACKAGE_CMD, new Object[] { packageName }, new IOutputStreamProvider() {
+				@Override
+				public byte[] getStreamAsByteArray() {
+					return (password + "\n").getBytes();
+				}
+			});
 			manager.disconnect();
-			
-			logger.log(Level.INFO, "Package {0} uninstalled successfully",
-					packageName);
+
+			logger.log(Level.INFO, "Package {0} uninstalled successfully", packageName);
 		}
 	}
 
@@ -740,9 +742,8 @@ public class SetupUtils {
 	 * @throws CommandExecutionException
 	 * @throws SSHConnectionException
 	 */
-	public static void addRepository(String ip, String username,
-			final String password, Integer port, String privateKey, String repository)
-			throws CommandExecutionException, SSHConnectionException {
+	public static void addRepository(final String ip, final String username, final String password, final Integer port,
+			final String privateKey, final String repository) throws CommandExecutionException, SSHConnectionException {
 		if (NetworkUtils.isLocal(ip)) {
 
 			logger.log(Level.INFO, "Adding repository locally.");
@@ -754,8 +755,7 @@ public class SetupUtils {
 
 				if (password != null) {
 					OutputStream stdIn = process.getOutputStream();
-					BufferedWriter writer = new BufferedWriter(
-							new OutputStreamWriter(stdIn));
+					BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdIn));
 					writer.write(password);
 					writer.write("\n"); // write newline char to mimic 'enter'
 										// press.
@@ -764,19 +764,12 @@ public class SetupUtils {
 
 				int exitValue = process.waitFor();
 				if (exitValue != 0) {
-					logger.log(
-							Level.SEVERE,
-							"Process ends with exit value: {0} - err: {1}",
-							new Object[] {
-									process.exitValue(),
-									StringUtils.convertStream(process
-											.getErrorStream()) });
-					throw new CommandExecutionException(
-							"Failed to execute command: " + command);
+					logger.log(Level.SEVERE, "Process ends with exit value: {0} - err: {1}",
+							new Object[] { process.exitValue(), StringUtils.convertStream(process.getErrorStream()) });
+					throw new CommandExecutionException("Failed to execute command: " + command);
 				}
-				
-				logger.log(Level.INFO, "Repository {0} added successfully",
-						repository);
+
+				logger.log(Level.INFO, "Repository {0} added successfully", repository);
 
 			} catch (IOException e) {
 				e.printStackTrace();
@@ -786,12 +779,10 @@ public class SetupUtils {
 
 		} else {
 
-			logger.log(Level.INFO,
-					"Adding repository remotely on: {0} with username: {1}",
+			logger.log(Level.INFO, "Adding repository remotely on: {0} with username: {1}",
 					new Object[] { ip, username });
 
-			SSHManager manager = new SSHManager(ip, username, password, port,
-					privateKey);
+			SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
 			manager.connect();
 			manager.execCommand(ADD_APP_REPO_CMD, new Object[] { repository }, new IOutputStreamProvider() {
 				@Override
@@ -800,9 +791,8 @@ public class SetupUtils {
 				}
 			});
 			manager.disconnect();
-			
-			logger.log(Level.INFO, "Repository {0} added successfully",
-					repository);
+
+			logger.log(Level.INFO, "Repository {0} added successfully", repository);
 		}
 
 	}
@@ -819,18 +809,18 @@ public class SetupUtils {
 	 * @throws SSHConnectionException
 	 * @throws CommandExecutionException
 	 */
-	public static void copyFile(String ip, String username, String password,
-			Integer port, String privateKey, File fileToTranster,
-			String destDirectory) throws SSHConnectionException,
-			CommandExecutionException {
+	public static void copyFile(final String ip, final String username, final String password, final Integer port,
+			final String privateKey, final File fileToTranster, final String destDirectory)
+					throws SSHConnectionException, CommandExecutionException {
 		if (NetworkUtils.isLocal(ip)) {
 
-			if (!destDirectory.endsWith("/")) {
-				destDirectory += "/";
+			String destinationDir = destDirectory;
+			if (!destinationDir.endsWith("/")) {
+				destinationDir += "/";
 			}
-			destDirectory += fileToTranster.getName();
+			destinationDir += fileToTranster.getName();
 
-			logger.log(Level.INFO, "Copying file to: {0}", destDirectory);
+			logger.log(Level.INFO, "Copying file to: {0}", destinationDir);
 
 			InputStream in = null;
 			OutputStream out = null;
@@ -838,16 +828,15 @@ public class SetupUtils {
 			try {
 
 				in = new FileInputStream(fileToTranster);
-				out = new FileOutputStream(destDirectory);
+				out = new FileOutputStream(destinationDir);
 
 				byte[] buf = new byte[1024];
 				int len;
 				while ((len = in.read(buf)) > 0) {
 					out.write(buf, 0, len);
 				}
-				
-				logger.log(Level.INFO, "File {0} copied successfully",
-						fileToTranster.getName());
+
+				logger.log(Level.INFO, "File {0} copied successfully", fileToTranster.getName());
 
 			} catch (FileNotFoundException e) {
 				e.printStackTrace();
@@ -872,17 +861,14 @@ public class SetupUtils {
 
 		} else {
 
-			logger.log(Level.INFO, "Copying file to: {0} with username: {1}",
-					new Object[] { ip, username });
+			logger.log(Level.INFO, "Copying file to: {0} with username: {1}", new Object[] { ip, username });
 
-			SSHManager manager = new SSHManager(ip, username, password, port,
-					privateKey);
+			SSHManager manager = new SSHManager(ip, username, password, port, privateKey);
 			manager.connect();
 			manager.copyFileToRemote(fileToTranster, destDirectory, false);
 			manager.disconnect();
-			
-			logger.log(Level.INFO, "File {0} copied successfully",
-					fileToTranster.getName());
+
+			logger.log(Level.INFO, "File {0} copied successfully", fileToTranster.getName());
 		}
 	}
 
